--- a/src/case-list.pug
+++ b/src/case-list.pug
@@ -10,7 +10,6 @@ append vars
 		link.icon = "favicons/favicon.ico"
 		link.icon16x16 = "favicons/favicon-16x16.png"
 		link.icon32x32 = "favicons/favicon-32x32.png"
-		footerLowTopPadding = true
 
 block content
 	+breadcrumb(['Главная'], 'Наши кейсы')(class="container")
@@ -23,7 +22,7 @@ block content
 					.dropdown__value-box
 						.dropdown__value Индустрии
 							span.dropdown__value-counter 0
-						+svg("chevron-dropdown")(class="dropdown__arrow")
+						+svg("chevron-dropdown", true)(class="dropdown__arrow")
 					ul.dropdown__options-list
 						li.dropdown__option
 							label.dropdown__checkbox
@@ -39,12 +38,13 @@ block content
 								span.dropdown__checkbox-text Индустрия 3
 				.dropdown.dropdown--gray-border.section-case-list__dropdown
 					.dropdown__value-box
-						input.dropdown__value(type="text", value="Москва", disabled)
-						+svg("chevron-dropdown")(class="dropdown__arrow")
+						input.dropdown__value(type="text", value="Все услуги", disabled)
+						+svg("chevron-dropdown", true)(class="dropdown__arrow")
 					ul.dropdown__options-list
-						li.dropdown__option.dropdown__option--selected(data-value="Москва") Москва
-						li.dropdown__option(data-value="Санкт-Петербург") Санкт-Петербург
-						li.dropdown__option(data-value="Нижний Новгород") Нижний Новгород
+						li.dropdown__option.dropdown__option--selected(data-value="Все услуги") Все услуги
+						li.dropdown__option(data-value="Услуга 1") Услуга 1
+						li.dropdown__option(data-value="Услуга 2") Услуга 2
+						li.dropdown__option(data-value="Услуга 3") Услуга 3
 		p.section-case-list__description Всего найдено: 145
 		.section-case-list__grid
 			// Card
@@ -122,25 +122,4 @@ block content
 				.card__bg-box
 					img.card__bg(src="images/section-cases/bg6.jpg", alt)
 		.section-case-list__button-row
-			button.button.button--white.button--md.section-case-list__button Показать еще
-
-	// Section Invite
-	.section-invite
-		.container
-			.section-invite__row
-				.section-invite__col
-					// Card
-					a.section-invite__card(href="#")
-						.section-invite__card-content
-							p.section-invite__card-title Вебинары
-							p.section-invite__card-text Познакомьтесь с современными тенденциями складской деятельности в режиме онлайн
-						+svg("chevron-right-big")(class="section-invite__card-arrow")
-				.section-invite__col
-					// Card
-					a.section-invite__card(href="#")
-						.section-invite__card-content
-							p.section-invite__card-title Наши кейсы
-							p.section-invite__card-text Изучите наш опыт в сфере складской логистики и получите похожее решение
-						+svg("chevron-right-big")(class="section-invite__card-arrow")
-
-
+			button.button.button--blue-light.button--md.section-case-list__button Показать еще
