--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -72,10 +72,10 @@ footer.footer
 				ul.footer__social.social
 					li.social__elem
 						a.social__link(href="#", target="_blank", rel="noreferrer", aria-label="Youtube")
-							+svg("youtube-blue")(class="social__link-icon")
+							+svg("youtube", true)(class="social__link-icon")
 					li.social__elem
 						a.social__link(href="#", target="_blank", rel="noreferrer", aria-label="Telegram")
-							+svg("telegram")(class="social__link-icon")
+							+svg("telegram", true)(class="social__link-icon")
 		// Copyright
 		.footer__copyright
 			.footer__copyright-col
