--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -52,5 +52,6 @@
 @import "sections/section-other-services";
 @import "sections/section-terminals";
 @import "sections/section-case-list";
+@import "sections/section-case-item";
 @import "sections/section-contact-info";
 @import "sections/section-about";
