--- a/src/pug/base.pug
+++ b/src/pug/base.pug
@@ -283,10 +283,11 @@ html(class=html.classList)&attributes(html.attrs)
 		include components/header
 		main
 			block content
-		include components/section-contacts
+		+sectionContacts(isCareer)
 		include components/footer
 		block scripts
 			script(src!=`${baseDir}js/vendor.js?v=${Date.now()}`)
 			script(src!=`${baseDir}js/main.js?v=${Date.now()}`)
-			include components/svg-sprite.html
+			include components/svg-sprite-included.html
+			img.hidden(src="images/svg-sprite/svg-sprite-static.svg", alt)
 		block body-end
