--- a/src/pug/mixins/svg.pug
+++ b/src/pug/mixins/svg.pug
@@ -1,3 +1,6 @@
-mixin svg(name)
+mixin svg(name, isIncluded)
 	svg&attributes(attributes)
-		use(xlink:href=`#${name}`)
+		if isIncluded
+			use(xlink:href=`#${name}`)
+		else
+			use(xlink:href=`images/svg-sprite/svg-sprite-static.svg#${name}`)
