--- a/src/scss/components/blocks/_button.scss
+++ b/src/scss/components/blocks/_button.scss
@@ -1,124 +1,3 @@
-/*.button {
-	display: inline-flex;
-	justify-content: center;
-	align-items: center;
-	font-family: $font-secondary;
-	text-align: center;
-	white-space: nowrap;
-	border-radius: 100px;
-
-
-	&--outline-blue {
-		border: 3px solid $color-blue;
-		border-radius: 50px;
-		background-color: $color-transparent;
-		color: $color-blue;
-		transition: background-color $transition-default, color $transition-default;
-
-		&:hover {
-			background-color: $color-blue;
-			color: $color-white;
-		}
-	}
-
-	&--outline-white {
-		 border: 3px solid $color-white;
-		 border-radius: 50px;
-		background-color: $color-transparent;
-		 color: $color-white;
-		 transition: background-color $transition-default, color $transition-default;
-	 }
-
-	&--blue {
-		border: 3px solid $color-blue;
-		border-radius: 50px;
-		background-color: $color-blue;
-		color: $color-white;
-		transition: background-color $transition-default, border-color $transition-default;
-
-		&:hover {
-			background-color: darken($color-blue, 10%);
-			border-color: darken($color-blue, 10%);
-		}
-	}
-
-	&--white {
-		background-color: $color-white;
-		border: none;
-		color: $color-blue;
-		transition: box-shadow $transition-default, color $transition-default;
-
-		&:hover {
-			color: $color-black;
-			box-shadow: 0 0 10px rgba($color-blue, .15);
-		}
-	}
-
-	&--lg {
-		padding: 29px 40px;
-		font-size: 18px;
-		line-height: 20px;
-		font-weight: 700;
-	}
-
-	&--md {
-		padding: 22px 40px;
-		font-size: 14px;
-		line-height: 18px;
-		font-weight: 700;
-
-		&.button--with-icon {
-			padding-top: 19px;
-			padding-bottom: 19px;
-		}
-
-		&.button--text-big {
-			font-size: 18px;
-			padding-top: 19px;
-			padding-bottom: 19px;
-		}
-	}
-
-	&--sm {
-		padding: 14px 33px;
-		font-family: $font-primary;
-		font-size: 16px;
-		line-height: 18px;
-		font-weight: 700;
-
-		&.button--text-big {
-			font-family: $font-additional;
-			font-size: 20px;
-			padding-top: 15px;
-			padding-bottom: 16px;
-		}
-
-		&.button--text-medium {
-			font-size: 20px;
-			padding-top: 18px;
-			font-weight: 700;
-		}
-	}
-
-	&--xs {
-		padding: 7px 14px;
-		font-size: 14px;
-		line-height: 18px;
-		font-weight: 500;
-	}
-
-	&__icon {
-		flex-shrink: 0;
-		width: 24px;
-		height: 24px;
-		margin-right: 8px;
-	}
-
-	&--white-shadow {
-		box-shadow: 0 0 0 5px $color-white;
-	}
-}*/
-
 .button {
 	display: inline-flex;
 	justify-content: center;
@@ -127,7 +6,6 @@
 	text-align: center;
 	white-space: nowrap;
 	border-radius: 100px;
-
 
 	&--outline-blue {
 		border: 3px solid $color-blue;
@@ -160,6 +38,19 @@
 		&:hover {
 			background-color: darken($color-blue, 10%);
 			border-color: darken($color-blue, 10%);
+		}
+	}
+
+	&--blue-light {
+		border: none;
+		border-radius: 50px;
+		background-color: $color-blue-light3;
+		color: $color-blue;
+		transition: background-color $transition-default, color $transition-default;
+
+		&:hover {
+			background-color: $color-blue;
+			color: $color-white;
 		}
 	}
 
@@ -208,6 +99,23 @@
 		font-size: 14px;
 		line-height: 18px;
 		font-weight: 500;
+	}
+
+	&--career-search {
+		padding: 18px 30px;
+		border-radius: 27px;
+		font-family: $font-additional;
+		font-size: 20px;
+		line-height: 20px;
+		font-weight: 700;
+	}
+
+	&--career-item {
+		padding: 14px 33px;
+		font-family: $font-additional;
+		font-size: 18px;
+		line-height: 18px;
+		font-weight: 700;
 	}
 
 	&__icon {
