--- a/src/scss/components/blocks/_road.scss
+++ b/src/scss/components/blocks/_road.scss
@@ -22,6 +22,13 @@
 	&--blue {
 		&::after {
 			background-image: url("../images/road-bg/road2.svg");
+			right: -33px;
+		}
+	}
+
+	&--center {
+		&::after {
+			background-position: center;
 		}
 	}
 }
