--- a/src/scss/components/sections/_section-contacts.scss
+++ b/src/scss/components/sections/_section-contacts.scss
@@ -122,6 +122,7 @@
 		font-size: 24px;
 		line-height: 100px;
 		font-weight: 600;
+		color: $color-blue;
 	}
 
 	&__call-link {
@@ -134,11 +135,11 @@
 
 	&__form-upload-text {
 		margin-top: 0;
-		margin-bottom: 47px;
+		margin-bottom: 36px;
 		font-size: 18px;
 		line-height: 18px;
 		font-weight: 700;
-		color: $color-white;
+		color: $color-blue;
 	}
 
 	&__form-upload-input {
@@ -148,13 +149,13 @@
 	&__form-upload-label {
 		margin: 0;
 		padding: 12px 32px;
-		border: 1px dashed $color-white;
+		border: 1px dashed $color-blue;
 		border-radius: 40px;
 		font-family: $font-additional;
 		font-size: 18px;
 		line-height: 18px;
 		font-weight: 700;
-		color: $color-white;
+		color: $color-blue;
 		cursor: pointer;
 	}
 
